--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1"
   }
